--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ before_install:
     - git clone https://github.com/HalfdanJ/openFrameworks.git
     - cd openFrameworks; git checkout documentation; cd ..; 
 language: node_js
-node_js: 
-    version: "0.10"
+node_js: "0.10"
 env:
     global:
         - secure: "NMv9a+t30l1Cf+MgO6OHpcKaK+yraCD6imDLwjt15Z9SIkKk5S70q2xt16ccRDDrn7x78C771WRkgN1ZgLW7T1gEOGB0bNt7gk2bSS+NoCbgL+/T4lWV3a/4+X+Ol6F8l6EuzlMX84FtGcegxMYWQd16pBvpAXeCkHmImOV5264="
