--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ before_install:
     - sudo apt-get install -qq doxygen
     - gem install sass --version "=3.2.12"
     - gem install compass --version "=0.12.2"
-    - git clone https://github.com/HalfdanJ/openFrameworks.git
-    - cd openFrameworks; git checkout documentation; cd ..; 
+
 language: node_js
 node_js: "0.10"
 env:
@@ -12,8 +11,16 @@ env:
         - secure: "NMv9a+t30l1Cf+MgO6OHpcKaK+yraCD6imDLwjt15Z9SIkKk5S70q2xt16ccRDDrn7x78C771WRkgN1ZgLW7T1gEOGB0bNt7gk2bSS+NoCbgL+/T4lWV3a/4+X+Ol6F8l6EuzlMX84FtGcegxMYWQd16pBvpAXeCkHmImOV5264="
 
 script:
-    - cd openFrameworks/libs/openFrameworksCompiled/project/doxygen/; doxygen Doxyfile;
-    - cd ../../../../../
+    - git clone https://github.com/HalfdanJ/openFrameworks.git
+    - cd openFrameworks; git checkout documentation; cd ..; 
+    - cd openFrameworks/libs/openFrameworksCompiled/project/doxygen/; doxygen Doxyfile; cd ../../../../../
     - node app openFrameworks
     - npm run sass;
-    - cd output; ls
+    - mkdir ghpages
+    - cd ghpages
+    - git clone https://github.com/halfdanJ/ofDocGenerator
+    - git checkout gh-pages
+    - cp -R ../output/* .
+    - git add --all .
+    - git commit -m "Auto update ofDoc from Travis-ci"
+    - git push https://${GH_TOKEN}@github.com/HalfdanJ/ofDocGenerator gh-pages
