--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ env:
         - secure: "NMv9a+t30l1Cf+MgO6OHpcKaK+yraCD6imDLwjt15Z9SIkKk5S70q2xt16ccRDDrn7x78C771WRkgN1ZgLW7T1gEOGB0bNt7gk2bSS+NoCbgL+/T4lWV3a/4+X+Ol6F8l6EuzlMX84FtGcegxMYWQd16pBvpAXeCkHmImOV5264="
 
 script:
+    - git config --global user.name "Travis-CI"
+    - git config --global user.email ${GIT_EMAIL}
     - git clone https://github.com/HalfdanJ/openFrameworks.git
     - cd openFrameworks; git checkout documentation; cd ..; 
     - cd openFrameworks/libs/openFrameworksCompiled/project/doxygen/; doxygen Doxyfile; cd ../../../../../
@@ -23,6 +25,4 @@ script:
     - cp -R ../output/* .
     - git add --all .
     - git commit -m "Auto update ofDoc from Travis-ci"
-    - git config --global user.name "${GIT_NAME}"
-    - git config --global user.email ${GIT_EMAIL}
-    - git push https://${GH_TOKEN}@github.com/HalfdanJ/ofDocGenerator gh-pages
+    - git push "https://${GH_TOKEN}@github.com/HalfdanJ/ofDocGenerator" gh-pages
