--- a/.travis.yml
+++ b/.travis.yml
@@ -11,20 +11,18 @@ env:
         - secure: "NMv9a+t30l1Cf+MgO6OHpcKaK+yraCD6imDLwjt15Z9SIkKk5S70q2xt16ccRDDrn7x78C771WRkgN1ZgLW7T1gEOGB0bNt7gk2bSS+NoCbgL+/T4lWV3a/4+X+Ol6F8l6EuzlMX84FtGcegxMYWQd16pBvpAXeCkHmImOV5264="
 
 script:
-    - git config user.name "Travis-CI"
-    - git config user.email ${GIT_EMAIL}
-    - echo ${GIT_EMAIL}
-    - git clone https://github.com/HalfdanJ/openFrameworks.git
+    - git config --global user.name "Travis-CI"
+    - git config --global user.email ${GIT_EMAIL}
+    - git clone --quiet https://github.com/HalfdanJ/openFrameworks.git
     - cd openFrameworks; git checkout documentation; cd ..; 
     - cd openFrameworks/libs/openFrameworksCompiled/project/doxygen/; doxygen Doxyfile; cd ../../../../../
     - node app openFrameworks
     - npm run sass;
     - mkdir ghpages
     - cd ghpages
-    - git clone https://github.com/halfdanJ/ofDocGenerator . 
-    - git checkout gh-pages
+    - git clone --quiet --branch=gh-pages https://${GH_TOKEN}@github.com/HalfdanJ/ofDocGenerator.git . > /dev/null
     - cp -R ../output/* .
     - git add --all .
     - git commit -m "Auto update ofDoc from Travis-ci"
     - git remote set-url origin "https://${GH_TOKEN}@github.com/HalfdanJ/ofDocGenerator.git"
-    - git push origin gh-pages
+    - git push -fq origin gh-pages
