respond yes to confirmation in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 before_install:
     - sudo apt-get install python-software-properties 
-    - sudo apt-add-repository ppa:libreoffice/libreoffice-4-2
+    - sudo apt-add-repository -y ppa:libreoffice/libreoffice-4-2
     - sudo apt-get update
     - sudo apt-get install doxygen
     - gem install sass --version "=3.2.12"
