--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,9 @@ env:
 script:
     - git config --global user.name "Travis-CI"
     - git config --global user.email ${GIT_EMAIL}
-    - git clone --quiet --branch documentation https://github.com/HalfdanJ/openFrameworks.git
-    - cd openFrameworks/libs/openFrameworksCompiled/project/doxygen/; doxygen Doxyfile; cd ../../../../../
-    - node app openFrameworks
-    - npm run sass;
+    - git clone --quiet https://github.com/openframeworks/openFrameworks.git
+    - cd openFrameworks/scripts/
+    - git clone https://github.com/halfdanJ/ofDocGenerator
+    - cd ofDocGenerator
+    - npm run start
     - ./publish.sh
