--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cheerio": "^0.18.0",
     "fs-extra": "^0.12.0",
     "q": "^1.1.1",
+    "underscore": "^1.7.0",
     "xml2js": "^0.4.4"
   }
 }
